fixed text aligned center issue

--- a/car-reviews/src/components/MainPage/searchbar.css
+++ b/car-reviews/src/components/MainPage/searchbar.css
@@ -1,3 +1,7 @@
+.searchbar {
+    text-align: center;
+}
+
 .searchbar--buttons {
     margin-top: 50px !important;
 }
